# indikator

./: BS_thread_pool.hpp  CMakeLists.txt  ETHBTC_5m_50000_bars.csv  ETHUSDT_5m_50000_bars.csv  PAXGBTC_5m_50000_bars.csv  PAXGUSDT_5m_50000_bars.csv  csv.h  cxxopts.hpp  deneme.py  indicator.cpp  optimization_all_best_scores_cmf.csv  optimization_best_results_cmf.csv  optimize.cpp  optimize_bin  test_small.csv
